Integrate flows into globe

--- a/scinet-globe/style/style.css
+++ b/scinet-globe/style/style.css
@@ -1,6 +1,9 @@
 html,
 body {
     overflow: hidden;
+    font-family: Courier New, Courier, monospace;
+    color: white;
+    font-weight: bold;
 }
 
 body {
