--- a/scinet-showfloor/style/style.css
+++ b/scinet-showfloor/style/style.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
-    font-family: Courier New, Courier, monospace;
+    /* font-family: Courier New, Courier, monospace; */
+    font-family: 'Helvetica', Arial, sans-serif;
     color: white;
     font-weight: bold;
 }
@@ -43,4 +44,28 @@ body {
     stroke-linecap: round;
     /* opacity: 0.25; */
     pointer-events: none;
+}
+
+.axis {
+    stroke: white;
+    fill: none;
+    stroke-width: 3px;
+    font-size: 25px;
+}
+
+.axis text {
+    stroke: none;
+    fill: white;
+    font-size: 50px;
+}
+
+.axis path {
+    stroke: white;
+    stroke-width: 8px;
+    fill: none;
+}
+
+.axis line {
+    stroke: white;
+    stroke-width: 5px;
 }
